--- a/css/fonts.css
+++ b/css/fonts.css
@@ -99,7 +99,7 @@
 @font-face {
   font-family: 'FontAwesome';
   src: url('../fonts/FontAwesome/Fontawesome-webfont.eot');
-  src: url('../fonts/FontAwesome/Fontawesome-webfont.ttf');
+  src: url('../fonts/FontAwesome/Fontawesome-webfont.ttf') format('ttf');
   src: url('../fonts/FontAwesome/Fontawesome-webfont.svg');
-  src: url('../fonts/FontAwesome/Fontawesome-webfont.woff');
+  src: url('../fonts/FontAwesome/Fontawesome-webfont.woff') format('woff');
 }
