--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,6 +2,9 @@ body {
   margin: 0;
   padding: 0;
   .grid-header {
+    width: 100%;
+    position: fixed;
+    z-index: 2;
     background-color: #182c38;
     .nav-bar {
       width: 100%;
@@ -46,9 +49,7 @@ body {
           float: right;
           display: none;
           cursor: pointer;
-          position: absolute;
-          right: 3%;
-          top: 3%;
+          margin: 33px 0;
           padding: 26px 11px;
           z-index: 5;
           span {
@@ -141,6 +142,7 @@ body {
   }
 
   .grid-intro {
+    padding-top: 124px;
     background-color: #182c38;
     .slide-1 {
       background: url(../img/intro.jpg);
@@ -343,10 +345,6 @@ body {
   }
   body .grid-header .nav-bar .nav-wrap .logo .brand .small {
     font-size: 12px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-button {
-    right: 0;
-    top: 5%;
   }
   body .grid-intro .slide-1 > .container .description p, body  .grid-intro .slide-2 > .container .description p, body  .grid-intro .slide-3 > .container .description p {
     font-size: 32px;
