--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -269,24 +269,28 @@ body {
 }
 
 @media screen and (max-width: 1680px) {
-  body .grid-header .nav-bar .nav-wrap .logo .brand .big {
-    font-size: 45px;
-  }
-  body .grid-header .nav-bar .nav-wrap .logo .brand .small {
-    font-size: 19px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list ul > li a {
-    font-size: 18px;
-    padding: 0 10px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list {
-    padding: 50px 10px 41px 0;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list li {
-    padding: 0 10px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list li a {
-    font-size: 19px;
+  body .grid-header .nav-bar .nav-wrap {
+    .logo .brand {
+      .big {
+        font-size: 45px;
+      }
+      .small {
+        font-size: 19px;
+      }
+    }
+    .nav-list {
+      ul > li a {
+        font-size: 18px;
+        padding: 0 10px;
+      }
+      padding: 50px 10px 41px 0;
+      li {
+        padding: 0 10px;
+        a {
+          font-size: 19px;
+        }
+      }
+    }
   }
 }
 
@@ -294,109 +298,133 @@ body {
   .container {
     padding: 0 5%;
   }
-  body .grid-header .nav-bar .nav-wrap .logo .brand .big {
-    font-size: 30px;
-  }
-  body .grid-header .nav-bar .nav-wrap .logo .brand .small {
-    font-size: 12px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list ul > li a {
-    font-size: 16px;
-    padding: 0 10px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list {
-    padding: 50px 10px 41px 0;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list li {
-    padding: 0 10px;
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list li a {
-    font-size: 16px;
-  }
-  body .grid-intro .slide-1 > .container .description p, body  .grid-intro .slide-2 > .container .description p, body  .grid-intro .slide-3 > .container .description p {
-    font-size: 85px;
-  }
-  body .grid-expect .container .products {
-    grid-template-columns: repeat(3, 1fr);
+  body {
+    .grid-header .nav-bar .nav-wrap {
+      .logo .brand {
+        .big {
+          font-size: 30px;
+        }
+        .small {
+          font-size: 12px;
+        }
+      }
+      .nav-list {
+        ul > li a {
+          font-size: 16px;
+          padding: 0 10px;
+        }
+        padding: 50px 10px 41px 0;
+        li {
+          padding: 0 10px;
+          a {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+    .grid-intro {
+      .slide-1 > .container .description p, .slide-2 > .container .description p, .slide-3 > .container .description p {
+        font-size: 85px;
+      }
+    }
+    .grid-expect .container .products {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  body .grid-intro .slide-1 > .container .description p, body .grid-intro .slide-2 > .container .description p, body .grid-intro .slide-3 > .container .description p {
-    font-size: 70px;
-    line-height: 70px;
+  body .grid-intro {
+    .slide-1 > .container .description p, .slide-2 > .container .description p, .slide-3 > .container .description p {
+      font-size: 70px;
+      line-height: 70px;
+    }
   }
   .container {
     padding: 0 7%;
   }
   body .grid-expect .container .products {
     grid-template-columns: repeat(2, 1fr);
-  }
-  body .grid-expect .container .products .element {
-    margin: 0 auto;
+    .element {
+      margin: 0 auto;
+    }
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-  body .grid-header .nav-bar .nav-wrap .logo .brand .big {
-    font-size: 27px;
-    line-height: 15px;
+  body {
+    .grid-header .nav-bar .nav-wrap .logo .brand {
+      .big {
+        font-size: 27px;
+        line-height: 15px;
+      }
+      .small {
+        font-size: 12px;
+      }
+    }
+    .grid-intro {
+      .slide-1 > .container .description p, .slide-2 > .container .description p, .slide-3 > .container .description p {
+        font-size: 32px;
+        line-height: 40px;
+        padding: 20px;
+      }
+    }
   }
-  body .grid-header .nav-bar .nav-wrap .logo .brand .small {
-    font-size: 12px;
+  .owl-nav {
+    .owl-prev, .owl-next {
+      padding: 10px 14px 6px 14px;
+    }
   }
-  body .grid-intro .slide-1 > .container .description p, body  .grid-intro .slide-2 > .container .description p, body  .grid-intro .slide-3 > .container .description p {
-    font-size: 32px;
-    line-height: 40px;
-    padding: 20px;
-  }
-  .owl-nav .owl-prev, .owl-nav .owl-next {
-    padding: 10px 14px 6px 14px;
-  }
-  body .container {
-    padding: 25px;
-  }
-  body .grid-question .container p {
-    font-size: 20px;
-  }
-  body .grid-question .container button {
-    margin: 25px 10px;
-    font-size: 19px;
+  body {
+    .container {
+      padding: 25px;
+    }
+    .grid-question .container {
+      p {
+        font-size: 20px;
+      }
+      button {
+        margin: 25px 10px;
+        font-size: 19px;
+      }
+    }
   }
   .click {
     padding: 20px 33px;
   }
-  body .grid-expect .container .title {
-    font-size: 35px;
-    padding: 35px 0 46px;
-  }
-  body .grid-expect .container .products {
-    padding-bottom: 70px;
-  }
-  body .grid-expect .container .products {
-    grid-template-columns: 1fr;
-  }
-  body .grid-expect .container .products .element {
-    margin: 0 auto;
+  body .grid-expect .container {
+    .title {
+      font-size: 35px;
+      padding: 35px 0 46px;
+    }
+    .products {
+      padding-bottom: 70px;
+      grid-template-columns: 1fr;
+      .element {
+        margin: 0 auto;
+      }
+    }
   }
 }
-@media screen and (min-width: 320px) and (max-width: 1024px) {
-  body .grid-header .nav-bar .nav-wrap .nav-button  {
-    display: block;
-  }
 
-  body .grid-header .nav-bar .nav-wrap .nav-list {
-    width: 100%;
-    height: 0;
-    padding: 0;
-    text-align: center;
-  }
-  body .grid-header .nav-bar .nav-wrap .active {
-    height: calc(100vh - 124px);
-  }
-  body .grid-header .nav-bar .nav-wrap .nav-list li {
-    width: 100%;
-    padding: 10px 0;
+@media screen and (min-width: 320px) and (max-width: 1024px) {
+  body .grid-header .nav-bar .nav-wrap {
+    .nav-button {
+      display: block;
+    }
+    .nav-list {
+      width: 100%;
+      height: 0;
+      padding: 0;
+      text-align: center;
+    }
+    .active {
+      height: calc(100vh - 124px);
+    }
+    .nav-list li {
+      width: 100%;
+      padding: 10px 0;
+    }
   }
   .nav-list li a {
     padding: 10px 10px;
